--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react-bootstrap": "^2.0.0-beta.4",
     "react-country-flag": "^2.3.0",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-select": "^4.3.1",
     "react-toastify": "^7.0.4",
     "web-vitals": "^1.1.2"
